# latch_can_bridge

./: CMakeLists.txt  package.xml
config/: can_mappings.yaml
hw_bridges/: elevation_hw_bridge.cpp  example_hw_bridge.cpp  front_tred_hw_bridge.cpp  hw_bridge_main.cpp  platform_hw_bridge.cpp
include/latch_can_bridge/: can_yaml_utils.hpp  latch_can_bridge.hpp
launch/: latch_can_bridge.launch.py
src/: can_yaml_utils.cpp  latch_can_bridge.cpp
